--- a/tgi/index-ru.html
+++ b/tgi/index-ru.html
@@ -40,8 +40,8 @@
                 <li class="main-nav__item"><a href="#">Contact</a></li>
                 <li class="main-nav__item">
                   <select>
-                    <option><a>EN</a></option>
-                    <option><a href="index-ru.html">RU</a></option>
+                    <option><a>RU</a></option>
+                    <option><a href="index.html">EN</a></option>
                   </select>
                 </li>
               </ul>
@@ -52,41 +52,41 @@
     </header>
     <div class="container">
       <div class="title__content">
-        <h1>Prepared<br>solutions<br><span>for broker<br>companies!</span></h1>
-        <a class="button  button--partner" href="#">Become a partner</a>
-        <a class="button  button--broker" href="#">Become a broker</a>
+        <h1>Готовые решения<br>для<span> Брокерских<br>Компаний!</span></h1>
+        <a class="button  button--partner" href="#">Стать партнером</a>
+        <a class="button  button--broker" href="#">Стать брокером</a>
       </div>
     </div>
   </section>
   <section class="edge">
     <div class="container">
-      <h1>Our advantages</h1>
+      <h1>Наши преимущества</h1>
       <div class="edge__flex">
         <div class="edge__box  edge__box--1">
-          <b class="edge__title-dark">Quality platform</b>
-          <p>Our innovative platform was developed taking into account the most popular trends</p>
+          <b class="edge__title-dark">Качественная платформа</b>
+          <p>Наша инновационная платформа была разработана с учетом наиболее популярных тенденций</p>
         </div>
         <div class="edge__box  edge__box--2">
-          <b class="edge__title-dark">Multifunctional CRM</b>
-          <p>We developed an intuitive interface for administrators with maximum functions</p>
+          <b class="edge__title-dark">Многофункциональный CRM</b>
+          <p>Мы разработали интуитивно понятный интерфейс для администраторов с максимальным функционалом.</p>
         </div>
         <div class="edge__box  edge__box--3">
-          <b class="edge__title-dark">Crypto-currency broker</b>
-          <p>Creation of companies, that deals in the trade and exchange of cryptocurrencies</p>
+          <b class="edge__title-dark">Криптовалютный брокер</b>
+          <p>Создание компаний, направленных на биржевую торговлю и обмен криптовалюами</p>
         </div>
       </div>
       <div class="edge__flex  edge__flex--second">
         <div class="edge__box  edge__box--4">
-          <b class="edge__title-light">Developing an effective site</b>
-          <p>Creating an official website that suits your customers, taking into consideration all your requirements and wishes</p>
+          <b class="edge__title-light">Разработка эффективного сайта</b>
+          <p>Создание привлекательного для клиентов официального сайта компании, с учетом всех ваших требований и пожеланий.</p>
         </div>
         <div class="edge__box  edge__box--5">
-          <b class="edge__title-light">Adaptive-design</b>
-          <p>The site and platform are designed and developed on the latest technologies and will always be displayed correctly on any type of device</p>
+          <b class="edge__title-light">Адаптивный дизайн</b>
+          <p>Сайт и платформа разработаны по последним технологиям и всегда будут корректно отображаться на любых типах устройств</p>
         </div>
         <div class="edge__box  edge__box--6">
-          <b class="edge__title-light">Exact quotations</b>
-          <p>We use quotes only from trusted suppliers</p>
+          <b class="edge__title-light">Точные котировки</b>
+          <p>Мы используем котировки только от проверенных поставщиков.</p>
         </div>
       </div>
     </div>
@@ -95,12 +95,12 @@
     <div class="slider__content">
       <div class="slider__box  slider__box--1">
         <div class="slider__container  slider__container--1">
-          <h1>A well-established plan for creating companies</h1>
+          <h1>Налаженный план  создания компаний</h1>
           <div class="slider__flex">
             <img src="img/slider1.png" alt="">
             <div class="slider__text-1">
               <b>01</b>
-              <p>Registration and development of the company's brand</p>
+              <p>Регистрация и разработка бренда компании</p>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
             <img src="img/slider2.png" width="700" height="auto" alt="">
             <div class="slider__text-1  slider__text-1--2">
               <b>02</b>
-              <p>Design Selection and site creation</p>
+              <p>Выбор дизайна<br>и создание сайта</p>
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
             <img src="img/slider3.png" width="600" alt="">
             <div class="slider__text-1  slider__text-1--3">
               <b>03</b>
-              <p>Installation and configuration of the platform</p>
+              <p>Установка и настройка<br>платформы</p>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
             <img src="img/slider4.png" alt="">
             <div class="slider__text-1  slider__text-1--4">
               <b>04</b>
-              <p>Launch of the platform and site</p>
+              <p>Запуск платформы и сайта</p>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
             <img src="img/slider5.png" alt="">
             <div class="slider__text-1  slider__text-1--5">
               <b>05</b>
-              <p>Maintenance and support to attract customers</p>
+              <p>Сопровождение и поддержка в привлечении клиентов</p>
             </div>
           </div>
         </div>
@@ -153,33 +153,33 @@
     
   </section>
   <section class="map">
-    <h1>We have experience working all over the world</h1>
+    <h1>У нас есть опыт работы по всему миру</h1>
     <img src="img/map.png" alt="Map">
   </section>
   <section class="contact">
     <div class="container">
       <form class="form" method="post">
-        <h1>Did you have any questions?</h1>
+        <h1>Возникли вопросы?</h1>
         <div class="form__flex">
           <div class="form__left">
-            <p>If you are interested in our services, write to us, we are ready to answer any questions!</p>
-            <input type="text" placeholder="Name">
-            <input type="tel" placeholder="Phone">
+            <p>Если вас заинтересовали наши услуги, пишите нам, мы готовы ответить на любые вопросы!</p>
+            <input type="text" placeholder="Имя">
+            <input type="tel" placeholder="Телефон">
             <input type="email" placeholder="E-mail">
-            <input type="submit" value="Your question">
+            <input type="submit" value="Задать вопрос">
           </div>
-          <textarea placeholder="Ask a Question"></textarea>
+          <textarea placeholder="Ваш вопрос"></textarea>
         </div>
       </form>
-      <h1 class="contact__title">Start <span>your business</span> right away<br>with a <span>team of professionals!</span></h1>
-      <a class="button  button--broker  button--broker-contact" href="#">Become a broker</a>
-      <a class="button  button--partner  button--partner-contact" href="#">Become a partner</a>
+      <h1 class="contact__title">Начни <span>свой бизнес</span> прямо сейчас<br>с <span>командой професионалов!</span></h1>
+      <a class="button  button--broker  button--broker-contact" href="#">Стать брокером</a>
+      <a class="button  button--partner  button--partner-contact" href="#">Стать партнером</a>
     </div>
   </section>
   <footer class="footer">
     <div class="container">
       <img src="img/logo-footer.png" alt="TGI Intelligent Solution">
-      <p>Binary options involve a high level of risk to your capital due to the volatility of the underlying markets. Product data may not be suitable for some investors. Therefore, you need to make sure that you understand the risks and consult with an independent and properly licensed financial adviser.</p>
+      <p>Бинарные опционы подразумевают высокий уровень риска для вашего капитала в силу волатильности базовых рынков. Данные продукты могут не подходить некоторым инвесторам. Таким образом, вы должны убедиться в том, что вы понимаете риски, и проконсультироваться у независимого и должным образом лицензированного финансового консультанта.</p>
     </div>
   </footer>
   <script src="js/mobile-menu.js"></script>
