--- a/tgi/index.html
+++ b/tgi/index.html
@@ -40,7 +40,7 @@
                 <li class="main-nav__item"><a href="#">Contact</a></li>
                 <li class="main-nav__item">
                   <select>
-                    <option><a>EN</a></option>
+                    <option selected><a>EN</a></option>
                     <option><a href="index-ru.html">RU</a></option>
                   </select>
                 </li>
