--- a/bb/index.html
+++ b/bb/index.html
@@ -26,11 +26,71 @@
     <div class="container">
       <h1>Be a broker in 7 days</h1>
       <b>Run your own Forex | CFD | Bitcoin Brand</b>
-      <div class="title__flex">
+      <div class="title__links">
         <a class="btn  btn--click" href="#">Register</a>
         <a class="btn  btn--unclick" href="#">Call me</a>
       </div>
     </div>
   </section>
+  <section class="products">
+    <div class="container">
+      <h1>Our products</h1>
+      <div class="products__flex">
+        <div class="products__box  products__box--bank">
+          <p>Direct bank transfers</p>
+        </div>
+        <div class="products__box  products__box--algo">
+          <p>Algo trading</p>
+        </div>
+        <div class="products__box  products__box--crm">
+          <p>Client area & CRM</p>
+        </div>
+        <div class="products__box  products__box--card">
+          <p>Credit card progressing</p>
+        </div>
+        <div class="products__box  products__box--risk">
+          <p>Risk management (RMIS)</p>
+        </div>
+        <div class="products__box  products__box--social">
+          <p>Social trading</p>
+        </div>
+      </div>
+      <hr>
+    </div>
+  </section>
+  <section class="manual">
+    <h1>Everything you need to run a<br>successful brokerage</h1>
+    <div class="manual__tabs">
+      <div class="manual__button">
+        <button class="manual__links  manual__links--trade" onclick="openCity(event, 'trade')">Trade</button>
+        <button class="manual__links  manual__links--manage" onclick="openCity(event, 'manage')">Manage</button>
+        <button class="manual__links  manual__links--integrate" onclick="openCity(event, 'integrate')">Integrate</button>
+        <button class="manual__links  manual__links--grow" onclick="openCity(event, 'grow')">Grow</button>
+      </div>
+      <div id="trade" class="manual__content  manual__content--trade">
+        <b>Web trader</b>
+        <p>Powerful, sleek and sophisticated web-based trading platform that syncs seamlessly with the MT4. Fully branded user interface with customizable features lets you set your brand apart from the rest.</p>
+        <b>MT4 client terminal</b>
+        <p>Fully branded MT4 client terminal gives you the opportunity to offer your traders an all-inclusive, easy-to-navigate and secure online trading experience on the most popular forex trading platform, all under your own brand.</p>
+        <b>CFD</b>
+        <p>Choose from two user-focused CFD offerings: our recently improved full-screen solution or our classic embedded platform. Both feature-rich interfaces are designed for optimal user engagement.</p>
+        <b>IOS and android app</b>
+        <p>Simple and sophisticated native mobile trading apps for iPhone and Android as well as a mobile-friendly web app for all other devices. Offer your traders powerful yet easy trading on the go.</p>
+      </div>
+      <div id="manage" class="manual__content">
+        <h3>Paris</h3>
+        <p>Paris is the capital of France.</p> 
+      </div>
+      <div id="integrate" class="manual__content">
+        <h3>Tokyo</h3>
+        <p>Tokyo is the capital of Japan.</p>
+      </div>
+      <div id="grow" class="manual__content">
+        <h3>Tokyo</h3>
+        <p>Tokyo is the capital of Japan.</p>
+      </div>
+    </div>
+  </section>
+  <script src="js/tabs.js"></script>
 </body>
 </html>
