--- a/bb/index.html
+++ b/bb/index.html
@@ -6,6 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BeBrokers</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <meta name="theme-color" content="#478aac">
 </head>
 <body>
   <header class="header">
@@ -76,16 +87,17 @@
         <p>Choose from two user-focused CFD offerings: our recently improved full-screen solution or our classic embedded platform. Both feature-rich interfaces are designed for optimal user engagement.</p>
         <b>IOS and android app</b>
         <p>Simple and sophisticated native mobile trading apps for iPhone and Android as well as a mobile-friendly web app for all other devices. Offer your traders powerful yet easy trading on the go.</p>
+        <!-- <a class="btn  btn--click" href="#">Register</a> -->
       </div>
-      <div id="manage" class="manual__content">
+      <div id="manage" class="manual__content  manual__content--manage">
         <h3>Paris</h3>
         <p>Paris is the capital of France.</p> 
       </div>
-      <div id="integrate" class="manual__content">
+      <div id="integrate" class="manual__content  manual__content--integrate">
         <h3>Tokyo</h3>
         <p>Tokyo is the capital of Japan.</p>
       </div>
-      <div id="grow" class="manual__content">
+      <div id="grow" class="manual__content  manual__content--grow">
         <h3>Tokyo</h3>
         <p>Tokyo is the capital of Japan.</p>
       </div>
