--- a/bb/index.html
+++ b/bb/index.html
@@ -73,7 +73,7 @@
     <h1>Everything you need to run a<br>successful brokerage</h1>
     <div class="manual__tabs">
       <div class="manual__button">
-        <button class="manual__links  manual__links--trade" onclick="openCity(event, 'trade')">Trade</button>
+        <button class="manual__links  manual__links--trade" onclick="openCity(event, 'trade')" autofocus>Trade</button>
         <button class="manual__links  manual__links--manage" onclick="openCity(event, 'manage')">Manage</button>
         <button class="manual__links  manual__links--integrate" onclick="openCity(event, 'integrate')">Integrate</button>
         <button class="manual__links  manual__links--grow" onclick="openCity(event, 'grow')">Grow</button>
