--- a/bb/index.html
+++ b/bb/index.html
@@ -39,7 +39,7 @@
       <b>Run your own Forex | CFD | Bitcoin Brand</b>
       <div class="title__links">
         <a class="btn  btn--click" href="#">Register</a>
-        <a class="btn  btn--unclick" href="#">Call me</a>
+        <a class="btn  btn--unclick" href="#">Contact support</a>
       </div>
     </div>
   </section>
@@ -87,7 +87,7 @@
         <p>Choose from two user-focused CFD offerings: our recently improved full-screen solution or our classic embedded platform. Both feature-rich interfaces are designed for optimal user engagement.</p>
         <b>IOS and android app</b>
         <p>Simple and sophisticated native mobile trading apps for iPhone and Android as well as a mobile-friendly web app for all other devices. Offer your traders powerful yet easy trading on the go.</p>
-        <!-- <a class="btn  btn--click" href="#">Register</a> -->
+        <a class="btn  btn--click" href="#">Click me</a>
       </div>
       <div id="manage" class="manual__content  manual__content--manage">
         <h3>Paris</h3>
@@ -102,6 +102,29 @@
         <p>Tokyo is the capital of Japan.</p>
       </div>
     </div>
+  </section>
+  <section class="support">
+    <div class="container">
+      <h1>Customer support available 24/7</h1>
+      <p>In any situations all of our clients are to receive an immediate assistance on any issues, and two groups of professionals are in charge of it – Success and Support Groups.</p>
+      <p>If you have troubles with the technical side of the platform, feel free to contact Support Group. They will lead you out of the dwell step by step and monitor the current situation. The Support Group constantly upgrade the platform’s software, as we are obliged to create the best business conditions for our clients and debug problems from the its appeal.</p>
+      <p>The Success Group is ready to offer you required guidance on financial management, answer any of your questions and work with your on the profit optimization. Please, do not doubt if you should contact us, because we are client-oriented and will help you fully exploit your business potential and create personalized technologies and strategies.</p>
+      <a class="btn  btn--unclick btn--blue" href="#">Contact support</a>
+    </div>
+  </section>
+  <section class="edge">
+    <ul class="edge__list">
+      <li class="edge__box">
+        <h3>50+ Currencies Accepted</h3>
+        <b>Worldwide</b>
+        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+      </li>
+      <li class="edge__box"></li>
+      <li class="edge__box"></li>
+      <li class="edge__box"></li>
+      <li class="edge__box"></li>
+      <li class="edge__box"></li>
+    </ul>
   </section>
   <script src="js/tabs.js"></script>
 </body>
