--- a/bb/index.html
+++ b/bb/index.html
@@ -73,7 +73,7 @@
     <h1>Everything you need to run a<br>successful brokerage</h1>
     <div class="manual__tabs">
       <div class="manual__button">
-        <button class="manual__links  manual__links--trade" onclick="openCity(event, 'trade')" autofocus>Trade</button>
+        <button class="manual__links  manual__links--trade" onclick="openCity(event, 'trade')">Trade</button>
         <button class="manual__links  manual__links--manage" onclick="openCity(event, 'manage')">Manage</button>
         <button class="manual__links  manual__links--integrate" onclick="openCity(event, 'integrate')">Integrate</button>
         <button class="manual__links  manual__links--grow" onclick="openCity(event, 'grow')">Grow</button>
@@ -114,16 +114,36 @@
   </section>
   <section class="edge">
     <ul class="edge__list">
-      <li class="edge__box">
+      <li class="edge__box  edge__box--1">
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
       </li>
-      <li class="edge__box"></li>
-      <li class="edge__box"></li>
-      <li class="edge__box"></li>
-      <li class="edge__box"></li>
-      <li class="edge__box"></li>
+      <li class="edge__box  edge__box--2">
+        <h3>50+ Currencies Accepted</h3>
+        <b>Worldwide</b>
+        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+      </li>
+      <li class="edge__box  edge__box--3">
+        <h3>50+ Currencies Accepted</h3>
+        <b>Worldwide</b>
+        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+      </li>
+      <li class="edge__box  edge__box--4">
+        <h3>50+ Currencies Accepted</h3>
+        <b>Worldwide</b>
+        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+      </li>
+      <li class="edge__box  edge__box--5">
+        <h3>50+ Currencies Accepted</h3>
+        <b>Worldwide</b>
+        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+      </li>
+      <li class="edge__box  edge__box--6">
+        <h3>50+ Currencies Accepted</h3>
+        <b>Worldwide</b>
+        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+      </li>
     </ul>
   </section>
   <script src="js/tabs.js"></script>
