--- a/bb/index.html
+++ b/bb/index.html
@@ -146,6 +146,12 @@
       </li>
     </ul>
   </section>
+  <section class="platform">
+    <div class="container">
+      <h1>Offer your traders a better trading platform.<br>They’ll keep coming back for more</h1>
+      <p>Reliable, powerful innovate trading platforms that work seamlessly across all devices.</p>
+    </div>
+  </section>
   <script src="js/tabs.js"></script>
 </body>
 </html>
