--- a/bb/index.html
+++ b/bb/index.html
@@ -115,31 +115,67 @@
   <section class="edge">
     <ul class="edge__list">
       <li class="edge__box  edge__box--1">
+        <div class="edge__name">
+          <div class="edge__title">
+            <img class="edge__img-1" src="img/edge-n1.svg" width="38">
+          </div>
+          <p>Quick Integration</p>
+        </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
       </li>
       <li class="edge__box  edge__box--2">
+        <div class="edge__name">
+          <div class="edge__title">
+            <img class="edge__img-2" src="img/edge-n2.svg" width="38">
+          </div>
+          <p>Quick Integration</p>
+        </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
       </li>
       <li class="edge__box  edge__box--3">
+        <div class="edge__name">
+          <div class="edge__title">
+            <img class="edge__img-3" src="img/edge-n3.svg" width="38">
+          </div>
+          <p>Quick Integration</p>
+        </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
       </li>
       <li class="edge__box  edge__box--4">
+        <div class="edge__name">
+          <div class="edge__title">
+            <img class="edge__img-4" src="img/edge-n4.svg" width="38">
+          </div>
+          <p>Quick Integration</p>
+        </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
       </li>
       <li class="edge__box  edge__box--5">
+        <div class="edge__name">
+          <div class="edge__title">
+            <img class="edge__img-5" src="img/edge-n5.svg" width="37">
+          </div>
+          <p>Quick Integration</p>
+        </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
       </li>
       <li class="edge__box  edge__box--6">
+        <div class="edge__name">
+          <div class="edge__title">
+            <img class="edge__img-6" src="img/edge-n6.svg" width="32">
+          </div>
+          <p>Quick Integration</p>
+        </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
         <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
@@ -150,8 +186,32 @@
     <div class="container">
       <h1>Offer your traders a better trading platform.<br>They’ll keep coming back for more</h1>
       <p>Reliable, powerful innovate trading platforms that work seamlessly across all devices.</p>
+      <img src="img/mockup.png" alt="Image">
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <div class="footer__left">
+          <img src="img/logo-w.svg" width="100" alt="BeBrokers">
+          <a class="btn  btn--unclick  btn--white" href="#">Contact Support</a>
+        </div>
+        <div class="footer__middle">
+          <p>Build your Forex business with our cutting-edge technology. Be Brokers® provides you everything you need to build your brokerage from scratch in just 7 days.</p><br>
+          <p>You just need to choose your business model and do what you do best- sales and marketing. We will take care of the rest.</p>
+        </div>
+        <div class="footer__right">
+          <div class="footer__social">
+            <a class="footer__fb" href="#"></a>
+            <a class="footer__gp" href="#"></a>
+            <a class="footer__tw" href="#"></a>
+            <a class="footer__em" href="#"></a>
+          </div>
+          <p>Copyrigt © 2014 Be Broker®</p>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/tabs.js"></script>
 </body>
 </html>
