--- a/bb/index.html
+++ b/bb/index.html
@@ -73,7 +73,7 @@
     <h1>Everything you need to run a<br>successful brokerage</h1>
     <div class="manual__tabs">
       <div class="manual__button">
-        <button class="manual__links  manual__links--trade" onclick="openCity(event, 'trade')">Trade</button>
+        <button class="manual__links  manual__links--trade  active" onclick="openCity(event, 'trade')">Trade</button>
         <button class="manual__links  manual__links--manage" onclick="openCity(event, 'manage')">Manage</button>
         <button class="manual__links  manual__links--integrate" onclick="openCity(event, 'integrate')">Integrate</button>
         <button class="manual__links  manual__links--grow" onclick="openCity(event, 'grow')">Grow</button>
@@ -90,16 +90,37 @@
         <a class="btn  btn--click" href="#">Click me</a>
       </div>
       <div id="manage" class="manual__content  manual__content--manage">
-        <h3>Paris</h3>
-        <p>Paris is the capital of France.</p> 
+        <b>CRM</b>
+        <p>Finally, a CRM specifically designed to meet the real, everyday needs of forex and CFD brokers. Easily enhance your operational excellence and provide a smoother customer experience.</p>
+        <b>MT4 manager</b>
+        <p>Gain fast and easy access to all trader account data, account preferences and trade history through the MT4 Manager. A simple and effective way to better manage and monitor your clients trading activity.</p>
+        <b>Client Area</b>
+        <p>Designed to promote self-registrations and self-deposits, our easy-to-navigate Client Area offers advanced registration modules, automated emailing, fast and secure payments and more.</p>
+        <b>Plugins</b>
+        <p>Harness the full potential of your MT4 platform through our wide variety of feature-rich plugins, designed, rigorously tested and updated regularly by our team of highly experienced developers.</p>
+        <a class="btn  btn--click" href="#">Click me</a>
       </div>
       <div id="integrate" class="manual__content  manual__content--integrate">
-        <h3>Tokyo</h3>
-        <p>Tokyo is the capital of Japan.</p>
+        <b>Payment Solutions</b>
+        <p>Enjoy hassle-free integrations to your choice of payment solution providers. Smart, automated cascading cashier ensures more successful deposits and a smoother customer experience.</p>
+        <b>Marketing and Affiliates</b>
+        <p>A range of technological solutions designed to support marketing automation, advanced tracking and analytics. Seamless integration into any third party marketing and affiliate software.</p>
+        <b>Communication Systems</b>
+        <p>Adaptability is key when it comes to your communication infrastructure. Fast deployment and full, flexible integration into the third party telephony, email, SMS, and chat vendors of your choice.</p>
+        <b>Liquidity Providers</b>
+        <p>For nearly a decade we have been working with the industry’s top liquidity providers. If a different one suits your needs better, we’ll happily integrate to any LP of your choosing.</p>
+        <a class="btn  btn--click" href="#">Click me</a>
       </div>
       <div id="grow" class="manual__content  manual__content--grow">
-        <h3>Tokyo</h3>
-        <p>Tokyo is the capital of Japan.</p>
+        <b>Success Manager</b>
+        <p>Leverage our team’s vast knowledge and experience in technology, sales & marketing, operations, finance and compliance. Let our Success Team help maximize your brokerage’s performance.</p>
+        <b>Custom-made Solutions</b>
+        <p>Stand out from the pack! We don’t believe in “one size fits all” and as your technology partner, we offer full customization on all our products to meet the individual business needs of your brokerage.</p>
+        <b>Module Report</b>
+        <p>Transform all the raw data entering your system into meaningful and actionable insights to streamline your operational infrastructure, boost marketing efficiency and help your business thrive.</p>
+        <b>24/7 Customer Care</b>
+        <p>Our team of highly experienced experts is available to assist you 24/7. We stand behind the value of the products and services we offer and commit to a strict SLA framework as part of our standard contract.</p>
+        <a class="btn  btn--click" href="#">Click me</a>
       </div>
     </div>
   </section>
@@ -121,27 +142,25 @@
           </div>
           <p>Quick Integration</p>
         </div>
-        <h3>50+ Currencies Accepted</h3>
-        <b>Worldwide</b>
-        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+        <h3>Get setup<br>in minutes</h3>
+        <p>We will do all the paperwork for you, get your processing service up and running in just a few minutes. Be Brokers®  allows you to easily process credit cards & receive direct bank transfers without having to write a single line of code. Start accepting orders without having to fuss with complicated APIs and documentation.</p>
       </li>
       <li class="edge__box  edge__box--2">
         <div class="edge__name">
           <div class="edge__title">
             <img class="edge__img-2" src="img/edge-n2.svg" width="38">
           </div>
-          <p>Quick Integration</p>
+          <p>Lowest Rates</p>
         </div>
-        <h3>50+ Currencies Accepted</h3>
-        <b>Worldwide</b>
-        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+        <h3>Save money as a business</h3>
+        <p>Our team of experts will get the best rates that fit your needs with a dedicated and fast service. By finding the lowest rates possible for your industry you can upgrade your business. We’ll help you increase growth and profits whether you are a E-Commerce or a POS merchant.</p>
       </li>
       <li class="edge__box  edge__box--3">
         <div class="edge__name">
           <div class="edge__title">
             <img class="edge__img-3" src="img/edge-n3.svg" width="38">
           </div>
-          <p>Quick Integration</p>
+          <p>50+ Currencies Accepted</p>
         </div>
         <h3>50+ Currencies Accepted</h3>
         <b>Worldwide</b>
@@ -152,33 +171,30 @@
           <div class="edge__title">
             <img class="edge__img-4" src="img/edge-n4.svg" width="38">
           </div>
-          <p>Quick Integration</p>
+          <p>Superior Fraud Detection</p>
         </div>
-        <h3>50+ Currencies Accepted</h3>
-        <b>Worldwide</b>
-        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+        <h3>Comprehensive Solution</h3>
+        <p>Fraud is a billion-dollar business and it is increasing every year, Be Brokers® uses the most comprehensive solution to identifying online fraud in the performance marketing space. advanced security screening and fraud prevention service that keeps all data safe and secure while minimizing all instances of chargebacks and unauthorized payments.</p>
       </li>
       <li class="edge__box  edge__box--5">
         <div class="edge__name">
           <div class="edge__title">
             <img class="edge__img-5" src="img/edge-n5.svg" width="37">
           </div>
-          <p>Quick Integration</p>
+          <p>PCI Compliance</p>
         </div>
-        <h3>50+ Currencies Accepted</h3>
-        <b>Worldwide</b>
-        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+        <h3>Secure cardholder data</h3>
+        <p>Because nothing is more important than keeping your customer’s payment card data secure. Compliance with the PCI Data Security Standard (PCI DSS) is vital for all merchants who accept credit cards, online or offline.</p>
       </li>
       <li class="edge__box  edge__box--6">
         <div class="edge__name">
           <div class="edge__title">
             <img class="edge__img-6" src="img/edge-n6.svg" width="32">
           </div>
-          <p>Quick Integration</p>
+          <p>Data Export</p>
         </div>
-        <h3>50+ Currencies Accepted</h3>
-        <b>Worldwide</b>
-        <p>Be Brokers® is the biggest company of its kind in the WORLD, we have become the ultimate payment finding platform anywhere you do business. You'll be amazed how quickly Be Brokers®  has made your business successful with just a few simple clicks.</p>
+        <h3>It's your data</h3>
+        <p>Let us save your time. Our dynamic interface and controls allows you to easily sort, filter, and export your data. There's no limits. You can export your own data; any time you want.</p>
       </li>
     </ul>
   </section>
