--- a/bb/index.html
+++ b/bb/index.html
@@ -223,7 +223,7 @@
             <a class="footer__tw" href="#"></a>
             <a class="footer__em" href="#"></a>
           </div>
-          <p>Copyrigt © 2014 Be Broker®</p>
+          <p>Copyrigt © 2018 Be Brokers®</p>
         </div>
       </div>
     </div>
