--- a/mm/index.html
+++ b/mm/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>MultiplyMarket</title>
-  <link rel="stylesheet" href="css/styless.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -59,7 +59,7 @@
             </ul>
             <div class="main-nav__user">
               <a class="button" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
-              <a class="button  button--black" href="https://client.multiplymarket.com/en/members/login">Log In</a>
+              <a class="button  button--blue" href="https://client.multiplymarket.com/en/members/login">Log In</a>
               <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
             </div>
           </nav>
@@ -111,7 +111,7 @@
       <div class="slider__box  slider__box--1">
         <div class="container">
           <p>Super fast speed in the execution<br>of orders, with millions of orders<br>performed so far</p>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+          <a class="button  button--blue  button--slider" href="https://client.multiplymarket.com/en/members/register/real">For live assistance click here</a>
         </div>
       </div>
       <div class="slider__box  slider__box--2">
@@ -130,7 +130,7 @@
       <div class="slider__box  slider__box--4">
         <div class="container">
           <p>24 hour round the clock<br>trading and support</p>
-          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Open live account</a>
+          <a class="button  button--blue  button--slider" href="https://client.multiplymarket.com/en/members/register/real">For live assistance click here</a>
         </div>
       </div>
     </div>
