--- a/mm/index.html
+++ b/mm/index.html
@@ -129,8 +129,10 @@
       </div>
       <div class="slider__box  slider__box--4">
         <div class="container">
-          <p>24 hour round the clock<br>trading and support</p>
-          <a class="button  button--blue  button--slider" href="https://client.multiplymarket.com/en/members/register/real">For live assistance click here</a>
+          <p>24 hour support by</p>
+          <img src="img/tv.svg" width="370">
+          <small>For live assistance</small>
+          <a class="button  button--slider" href="https://client.multiplymarket.com/en/members/register/real">Click here</a>
         </div>
       </div>
     </div>
